# OpenStudio-resources

./: .dockerignore  .gitattributes  .gitignore  .rubocop.yml  Analyzing_Regression_Tests.ipynb  Analyzing_Regression_Tests.py  Benchmark_sensitivity.ipynb  CMakeLists.txt  CTestConfig.cmake  Dockerfile.in  FindEnergyPlus.cmake  Jenkinsfile  ProjectMacros.cmake  README.md  Ruby-AST.ipynb  SDD_tests.rb  Timings_VT_OSM.ipynb  Vagrant.hxx.in  automateSquish.cmake  colors.sh  convert_ruby_to_python.rb  docker_container_script.sh  environment.yml  highlevel_tests.rb  intersect.rb.erb  launch_all.sh  launch_docker.sh  model_tests.rb  performance_baseline.py  performance_test.py  print_tests.rb  process_results.py  pull_request_template.md  regression_analysis.py  requirements.txt  resources.in  run_tests.sh  segfault_tests.rb  sql_tests.csv  sql_tests.rb  (+7 more)
.github/: pull_request_template.md
Test-Stability/: Regression_Test_Status.html
analysisdriver/: Profiling Rollup.xlsm
analysisdriver_tests/: AnalysisDriverFixture.cpp  AnalysisDriverFixture.hpp  AnalysisDriver_GTest.cpp  CMakeLists.txt  CloudAnalysisDriver_GTest.cpp  CloudFixture.cpp  CloudFixture.hpp
ci/: install-openstudio.qs  install-windows.qs
contam_tests/: CMakeLists.txt  CONTAM.hxx.in  CONTAMSimulationFixture.cpp  CONTAMSimulationFixture.hpp  CONTAMSimulation_GTest.cpp  CONTAMTemplate.osm
doc/: Instructions_Docker.md  Setting_up_Python.md
energyplus/: CMakeLists.txt  PostProcessComparison.rb
energyplus_tests/: CMakeLists.txt  EnergyPlusBin.hxx.in  EnergyPlusProfileFixture.cpp  EnergyPlusProfileFixture.hpp  EnergyPlusProfileTranslators_GTest.cpp  EnergyPlusTestFixture.cpp  EnergyPlusTestFixture.hpp  EnergyPlusTranslators_GTest.cpp
gbxml/: ShelteringTree.xml  SimpleBoxTower1.xml  sample.xml
model/: CMakeLists.txt  Medium_GeometryHeavy.osm  ModelDescriptions.txt  OpenStudio.idd
model_tests/: Alpha1_GTest.cpp  CMakeLists.txt  Coverage.rb.in  Intersection_GTest.cpp  ModelBin.hxx.in  ModelFixture.cpp  ModelFixture.hpp  ModelProfileFixture.cpp  ModelProfileFixture.hpp  ModelProfiling_GTest.cpp  ModelSimulationFixture.cpp  ModelSimulationFixture.hpp  ModelSimulation_GTest.cpp  TimeDependentValuation_GTest.cpp
project/: CMakeLists.txt
project_tests/: CMakeLists.txt  ProjectDatabaseProfiling_GTest.cpp  (+6 more)
runmanager_tests/: BasementSlabJobs_GTest.cpp  CMakeLists.txt  RunManagerProfiling_GTest.cpp  RunManagerStress_GTest.cpp  RunManagerTestFixture.cpp  RunManagerTestFixture.hpp  SignalListener.hpp
squish/: CMakeLists.txt  SquishQTSanityTest.cmake
squish/SquishTestingResources/: 5x5grid.skp  CMakeLists.txt  bad_idf.idf  bad_osm.osm  clean.osm  four_scenes.skp  good_idf.osm  good_osm.idf
squish/SquishTestingResources/EP6_sample_files/: CMakeLists.txt  readme.txt
squish/SquishTestingResources/GenScripts/: OSSP_XP_IDF_bad_script_shared.js  OSSP_XP_IDF_bad_suite.conf  OSSP_XP_IDF_corner_objects.map  OSSP_XP_IDF_corner_script_shared.js  OSSP_XP_IDF_xmpl_objects.map  OSSP_XP_IDF_xmpl_script_shared.js  OSSP_XP_IDF_xmpl_suite.conf  OSSP_XP_IDF_xmpl_test.js  Suite_Generation_Script-OSSP_XP_IDF_bad.rb  Suite_Generation_Script-OSSP_XP_IDF_corner.rb  Suite_Generation_Script-OSSP_XP_IDF_xmpl.rb  new_main.rb  zOSSP_XP_IDF_xmpl_script_shared-alt01.js
squish/SquishTestingResources/bad_IDF_files/: CMakeLists.txt
squish/SquishTestingResources/bad_IDF_files/borderline_bad/: AirflowNetwork_MultiZone_House.idf  dfg-HighPolySubSurface.idf
squish/SquishTestingResources/bad_IDF_files/unknown_problem/: PA_withstair.osm
squish/SquishTestingResources/corner IDF files/: RSF_may2010.idf
squish/SquishTestingResources/corner IDF files/brents large files/: HospitalBaseline V6.idf  RTE long initialization time V6.idf  RefBldgOutPatientNew2004_Chicago V6.idf  RefBldgSecondarySchoolNew2004_Chicago V6.idf  Solar Shading - Attached Shades V6.idf  Solar Shading - External Shades V6.idf  Thomas Mann Design Case - Ventilated Slabs V6.idf  UFAD 54 zones V6.idf
squish/SquishTestingResources/corner IDF files/surface_control_tests_OSM/: 00007surfaces.osm  000350surfaces.osm  00035surfaces.osm  00070surfaces.osm  00350surfaces_in50zones.osm
squish/SquishTestingResources/corner IDF files/vertex_control_tests_OSM/: 003verticies50zones.osm  004verticies50zones.osm  005verticies50zones.osm  012verticies50zones.osm  024verticies50zones.osm  048verticies50zones.osm  096verticies50zones.osm
squish/SquishTestingResources/corner IDF files/zone_control_tests/: 0005zone.idf  0010zone.idf  0025zone.idf  0050zone.idf  0100zone.idf  0200zone.idf  0400zone.idf  0500zone.idf  no_fenestration_0005zone.idf  no_fenestration_0010zone.idf  no_fenestration_0025zone.idf  no_fenestration_0050zone.idf  no_fenestration_0100zone.idf  no_fenestration_0200zone.idf
squish/SquishTestingResources/corner IDF files/zone_control_tests_OSM/: 0005zone.osm  0010zone.osm  0025zone.osm  0050zone.osm  0100zone.osm  0200zone.osm  0400zone.osm  0500zone.osm
squish/suite_ResultsViewer_Sanity/: CMakeLists.txt  objects.map  suite.conf
squish/suite_ResultsViewer_Sanity/tst_FloodPlot/: test.js
squish/suite_ResultsViewer_Sanity/tst_FloodPlot/verificationPoints/: VP1
squish/suite_ResultsViewer_Sanity/tst_LinePlot/: test.js
squish/suite_ResultsViewer_Sanity/tst_LinePlot/verificationPoints/: VP1
squish/suite_ResultsViewer_Sanity/tst_OpenResultFile/: test.js
squish/suite_RunManager_Sanity/: CMakeLists.txt  objects.map  suite.conf
squish/suite_RunManager_Sanity/tst_RM_basicQueueProcess/: test.js
squish/suite_RunManager_Sanity/tst_RM_basicQueueProcess/verificationPoints/: VP1  VP2
squish/suite_RunManager_Sanity/tst_RM_resetSettings/: test.js
squish/suite_fileoperations/: objects.map  suite.conf
squish/suite_fileoperations/tst_New_Save/: test.js
squish/suite_fileoperations/tst_New_SaveAs/: test.js
squish/suite_fileoperations/tst_SetPrefs/: test.js
squish/suite_sanity/: objects.map  suite.conf
squish/suite_sanity/tst_case1/: test.js
squish/suite_sanity/tst_case2/: test.js
squish/suite_sanity/tst_case2/verificationPoints/: VP1  VP2  VP3  VP4  VP5
(+21370 files in other folders)
